fixed service descriptions from getting cut off

--- a/workspace/custom.css
+++ b/workspace/custom.css
@@ -4365,7 +4365,6 @@ a.ui-datepicker-next.ui-corner-all:hover {
     text-align: center;
     padding: 10px;
     width: 294px;
-    height: 104px;
   }
   .bw-iframe-container .bw-appointment-services .bwt-appointment-modal-button-wrapper .appointment_link {
     width: 250px;
